bug fixed on mobile responsive

--- a/frontend/src/components/active/resetPassword.css
+++ b/frontend/src/components/active/resetPassword.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 480px) {
+@media all and (min-width: 280px) {
   .reset {
     padding: 60px 0;
   }
@@ -8,7 +8,7 @@
 
   .reset form {
     padding: 30px 30px;
-  
+
     border-radius: 8px;
     border-style: solid;
     border-width: 2px;
@@ -32,7 +32,7 @@
   margin-top: 10%;
   color: red;
 }
-#emailLogin-message{
+#emailLogin-message {
   text-align: center;
   margin-top: 10%;
   color: red;
